<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_large"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/text_example"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/layoutGeneratePdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/blue_grey_200"
            android:padding="@dimen/margin_large"
            android:src="@drawable/ic_pdf"
            app:tint="@color/red_900" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_large"
            android:text="@string/text_create_test_pdf"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutGenerateHtmlPdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/pink_100"
            android:padding="@dimen/margin_large"
            android:src="@drawable/ic_pdf"
            app:tint="@color/red_900" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_large"
            android:text="@string/text_create_html_pdf"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEditHtmlPdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_large"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/indigo_200"
            android:padding="@dimen/margin_large"
            android:src="@drawable/ic_pdf"
            app:tint="@color/red_900" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_large"
            android:text="@string/text_edit_html_pdf"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/app_icon_license"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/pdf_icon_license"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:typeface="monospace" />

</LinearLayout>