<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPDFVisitActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".activity.PDFCreatorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_800">

        <LinearLayout
            android:id="@+id/layoutPdfPreview"
            android:layout_width="@dimen/pdf_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/pdf_margin_vertical"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/pdf_margin_vertical" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutPrintPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.tejpratapsingh.pdfcreator.custom.ZoomLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imagePreviewPdf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey_800"
                    android:contentDescription="@string/pdf_page_as_image"
                    android:paddingLeft="20dp"
                    android:paddingTop="100dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="20dp" />

            </com.tejpratapsingh.pdfcreator.custom.ZoomLayout>

            <TextView
                android:id="@+id/textViewPreviewPDFNotSupported"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_300"
                android:gravity="center"
                android:paddingTop="100dp"
                android:text="@string/text_pdf_preview_not_support"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/buttonPreviousPage"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/text_previous_page"
                android:src="@drawable/ic_left"
                android:textColor="@color/red_800" />

            <TextView
                android:id="@+id/textViewPreviewPageNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/buttonNextPage"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/text_next_page"
                android:src="@drawable/ic_right"
                android:textColor="@color/red_800" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSendEmail"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_next" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewPdfGeneratingHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:text="@string/text_generating_pdf"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:visibility="gone" />

</FrameLayout>