<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuPrintPdf"
        android:icon="@drawable/ic_pdf"
        android:title="@string/text_create_pdf"
        app:iconTint="@color/colorWhite"
        app:showAsAction="always" />
</menu>