<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.tejpratapsingh.pdfcreator.custom.TouchImageViewFling
        android:id="@+id/imageViewItemPdfViewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_800"
        android:contentDescription="@string/pdf_page_as_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewPdfViewerPageNumber"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:layout_marginBottom="0dp"
            android:alpha="0.7"
            android:background="@drawable/layout_rounded_corner"
            android:gravity="center"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_small"
            android:textStyle="bold"
            tools:text="1 of 5" />

    </LinearLayout>

</RelativeLayout>